forth/test/fail/test_const_fold_redundant_loc_mod_zero.af
use' ../../lang.af
fun: test_const_fold_redundant_loc_mod_zero { val -- out } 0 mod: val val end
